--- a/widget-weather/src/components/loading.module.css
+++ b/widget-weather/src/components/loading.module.css
@@ -7,40 +7,41 @@
     box-sizing: border-box;
     background-color: white;
     border-radius: 5px;
-}
-
-.loader {
+  }
+  
+  .loader {
     width: 50px;
     height: 50px;
     box-sizing: border-box;
     padding: 10px;
     background: rgb(2, 0, 36);
     background: linear-gradient(
-        43deg,
-        rgb(2, 0, 36, 1)0%,
-        rgba(9, 9, 121, 1)35%,
-        rgb(0, 212, 255, 1)100%,
+      43deg,
+      rgba(2, 0, 36, 1) 0%,
+      rgba(9, 9, 121, 1) 35%,
+      rgba(0, 212, 255, 1) 100%
     );
     display: flex;
     align-items: center;
     justify-content: center;
     border-radius: 50%;
+  
     animation: rotation 0.5s linear infinite;
-}
-
-.loaderDiv {
+  }
+  
+  .loader div {
     background-color: white;
     width: 20px;
     height: 20px;
     box-sizing: border-box;
     border-radius: 50%;
-}
-
-@keyframes rotation {
+  }
+  
+  @keyframes rotation {
     from {
-        transform: rotate(0deg);
+      transform: rotate(0deg);
     }
     to {
-        transform: rotate(358deg);
+      transform: rotate(358deg);
     }
-}
+  }
